Fix width overflow

--- a/style.css
+++ b/style.css
@@ -74,6 +74,12 @@
   box-sizing: border-box;
 }
 
+html,
+body {
+  max-width: 100%;
+  overflow-x: hidden;
+}
+
 html {
   font-family: Ubuntu, sans-serif;
   padding: 0;
@@ -81,7 +87,6 @@ html {
   background-color: var(--color-gray-900);
   color: var(--color-primary-100);
   -webkit-font-smoothing: antialiased;
-  overflow-x: hidden;
   scroll-behavior: smooth;
 }
 
